[package]
name = "alloy-html"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-parser = { path = "alloy-parser" }
# Parse command line argument by defining a struct.
structopt = "0.3.26"

